src/pages/catalog/catalog.scss
.catalog {
	margin-top: 100px;
	width: 100%;
}

.catalog-content {
	width: 100%;
	display: flex;
	flex-direction: column;
	align-items: start;
	justify-content: start;
	padding: 0rem 2rem 2.5rem;

}

.sort-search-container {
	width: 100%;
	padding: 0rem 0rem 2rem;
	display: flex;
	align-items: center;
	justify-content: space-between;
	gap: 1rem
}

.nav-sidebar {
	z-index: 12;

	display: flex;
	flex-direction: column;
	align-items: center;
	border-top: 0.1rem solid #cfcfcf;
	min-width: 30rem;
}

.product-container-catalog {
	width: 100%;
	display: flex;
	justify-content: center;
	align-items: start;
}

.card-container {
	display: flex;
	margin-left: -0.1rem;
	justify-content: start;
	flex-wrap: wrap;
	flex: 1;
}

.loading-indicator {
	left: 50%;
	top: 50%;
	z-index: -1;
	display: block;
	position: fixed;
	height: 50px;
	width: 50px;
	border-radius: 50%;
	border: 1px solid #cfcfcf;
	border-top: 1px solid #212121;
	animation: rotate 1s linear infinite;
}

@keyframes rotate {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@media screen and (max-width: 800px) {
	.sort-search-container {
		flex-wrap: wrap;
		align-items: center;
	}

	.nav-sidebar {
		position: fixed;
		left: -120%;
	}
}

@media screen and (max-width: 500px) {
	.card-container {
		justify-content: center;
	}
}

.not-found-mes {
	width: 100%;
	display: flex;
	align-items: center;
	align-self: center;
	justify-content: center;
	text-align: center;
	padding: 2rem;
	font-size: 2rem;
	font-family: 'Montserratt', sans-serif;
	color: #212121;
}

